app/assets/stylesheets/books.scss
@import "colors";

.Books-Field {
  padding: 10px;
}

.Books-Actions {
  padding: 5px;
}

.books-Main {
  padding: 3% 25% 1% 25%;
  h1 {
    color: #1b60f3;

    font-family: "Playfair Display", serif;
    font-size: 2em;
  }

  h2 {
    color: #1b60f3;

    font-family: Open Sans, serif;
    font-size: 1.2em;
    font-style: normal;
    font-weight: 600;
  }

  h3 {
    color: #1b60f3;

    font-family: Open Sans;
    font-style: normal;
  }
}

.books-Unknown {
  width: 10em;
  height: 10em;
  padding: 1.6em 3em 1.5em 3em;
}

.books-FlexContainer {
  display: inline-flex;
  flex-wrap: wrap;
  justify-content: flex-start;
  .books-FlexContainer-child {
    flex-basis: auto;
    float: left;
    max-width: 13em;
    max-height: 22em;
    min-width: 13em;
    min-height: 22em;
    margin: 0.5em;

    background: #ffffff;
    border: none;
    border-radius: 25px;
    box-shadow: 0px 0px 50px rgba(27, 96, 243, 0.08);
  }

  .books-FlexContainer-apiImg {
    max-width: 13em;
    min-width: 13em;
    padding: 1.6em 3em 1.5em 3em;
  }

  .books-FlexContainer-unavailableImg {
    width: 12em;
    height: 13.5em;
    padding: 1.6em 0 1.5em 2em;
  }

  .books-FlexContainer-title {
    max-width: 100%;
    padding: 0 8% 3% 8%;

    color: #1b60f3;

    font-family: Open Sans;
    font-size: 0.8em;
    font-weight: 600;
  }

  .books-FlexContainer-author {
    padding: 0 8% 3% 8%;

    color: #7485a9;

    font-family: Open Sans;
    font-size: 0.8em;
  }

  .books-FlexContainer-presenter {
    padding: 0 8% 0 8%;

    color: #1f29a4;

    font-family: Open Sans;
    font-size: 0.7em;
  }
}

.books-NewButton {
  display: inline-block;
  padding: 5px 20px 6px 20px;
  margin: 40px 0;

  background: $base-color;
  border: none;
  border-radius: 25px;
  color: $tertiary-color;
  cursor: pointer;

  font-family: Open Sans, serif;
  font-size: 1em;
  text-decoration: none;
}

